# EAMLCompiler

./: .gitignore  CMakeLists.txt  README.md  eaml  style.css
examples/: hello.eaml  helloworld.eaml  test.eaml
include/: anaylzer.hpp  codegen.hpp  codeutils.hpp  lexer.hpp  parser.hpp
src/: codegen.cpp  lexer.cpp  main.cpp  parser.cpp
